--- a/mypage_book.html
+++ b/mypage_book.html
@@ -50,44 +50,38 @@
           <img src="images/pic-1.png" alt="" />
         </div>
         <div class="mybook-date">
-          <span class="bookdate">대출날짜</span>
           <span>02.22</span>
+          <span>~</span>
         </div>
       </div>
+
       <div class="mybook">
         <div class="mybook-img">
           <img src="images/pic-1.png" alt="" />
         </div>
         <div class="mybook-date">
-          <span class="bookdate">대출날짜</span>
           <span>02.22</span>
+          <span>~</span>
         </div>
       </div>
+
       <div class="mybook">
         <div class="mybook-img">
           <img src="images/pic-1.png" alt="" />
         </div>
         <div class="mybook-date">
-          <span class="bookdate">대출날짜</span>
           <span>02.22</span>
+          <span>~</span>
         </div>
       </div>
+
       <div class="mybook">
         <div class="mybook-img">
           <img src="images/pic-1.png" alt="" />
         </div>
         <div class="mybook-date">
-          <span class="bookdate">대출날짜</span>
           <span>02.22</span>
-        </div>
-      </div>
-      <div class="mybook">
-        <div class="mybook-img">
-          <img src="images/pic-1.png" alt="" />
-        </div>
-        <div class="mybook-date">
-          <span class="bookdate">대출날짜</span>
-          <span>02.22</span>
+          <span>~</span>
         </div>
       </div>
     </section>
