--- a/mypage_book.html
+++ b/mypage_book.html
@@ -84,6 +84,46 @@
           <span>~</span>
         </div>
       </div>
+
+      <div class="mybook">
+        <div class="mybook-img">
+          <img src="images/pic-1.png" alt="" />
+        </div>
+        <div class="mybook-date">
+          <span>02.22</span>
+          <span>~</span>
+        </div>
+      </div>
+
+      <div class="mybook">
+        <div class="mybook-img">
+          <img src="images/pic-1.png" alt="" />
+        </div>
+        <div class="mybook-date">
+          <span>02.22</span>
+          <span>~</span>
+        </div>
+      </div>
+
+      <div class="mybook">
+        <div class="mybook-img">
+          <img src="images/pic-1.png" alt="" />
+        </div>
+        <div class="mybook-date">
+          <span>02.22</span>
+          <span>~</span>
+        </div>
+      </div>
+
+      <div class="mybook">
+        <div class="mybook-img">
+          <img src="images/pic-1.png" alt="" />
+        </div>
+        <div class="mybook-date">
+          <span>02.22</span>
+          <span>~</span>
+        </div>
+      </div>
     </section>
 
     <footer class="footer">
