--- a/mypage.html
+++ b/mypage.html
@@ -56,7 +56,7 @@
 
     <section class="mypage-box">
       <div class="mypage-box-content">
-        <span class="content-head">내가 쓴 글</span>
+        <span class="content-head">대여한 책</span>
         <span>3</span>
       </div>
       <div class="mypage-box-content mypageboxborder">
@@ -64,7 +64,7 @@
         <span>3</span>
       </div>
       <div class="mypage-box-content">
-        <span class="content-head">내가 쓴 글</span>
+        <span class="content-head">댓글 단 글</span>
         <span>3</span>
       </div>
     </section>
