--- a/mypage_book.html
+++ b/mypage_book.html
@@ -49,9 +49,14 @@
         <div class="mybook-img">
           <img src="images/pic-1.png" alt="" />
         </div>
-        <div class="mybook-date">
-          <span>02.22</span>
-          <span>~</span>
+        <div class="mybook-info">
+          <div class="bookdate">
+            <span>02.22</span>
+            <span>~</span>
+          </div>
+          <div class="bookreturn">
+            <button class="returnbtn">반납</button>
+          </div>
         </div>
       </div>
 
@@ -59,9 +64,14 @@
         <div class="mybook-img">
           <img src="images/pic-1.png" alt="" />
         </div>
-        <div class="mybook-date">
-          <span>02.22</span>
-          <span>~</span>
+        <div class="mybook-info">
+          <div class="bookdate">
+            <span>02.22</span>
+            <span>~</span>
+          </div>
+          <div class="bookreturn">
+            <button class="returnbtn">반납</button>
+          </div>
         </div>
       </div>
 
@@ -69,9 +79,14 @@
         <div class="mybook-img">
           <img src="images/pic-1.png" alt="" />
         </div>
-        <div class="mybook-date">
-          <span>02.22</span>
-          <span>~</span>
+        <div class="mybook-info">
+          <div class="bookdate">
+            <span>02.22</span>
+            <span>~</span>
+          </div>
+          <div class="bookreturn">
+            <button class="returnbtn">반납</button>
+          </div>
         </div>
       </div>
 
@@ -79,9 +94,14 @@
         <div class="mybook-img">
           <img src="images/pic-1.png" alt="" />
         </div>
-        <div class="mybook-date">
-          <span>02.22</span>
-          <span>~</span>
+        <div class="mybook-info">
+          <div class="bookdate">
+            <span>02.22</span>
+            <span>~</span>
+          </div>
+          <div class="bookreturn">
+            <button class="returnbtn">반납</button>
+          </div>
         </div>
       </div>
 
@@ -89,9 +109,14 @@
         <div class="mybook-img">
           <img src="images/pic-1.png" alt="" />
         </div>
-        <div class="mybook-date">
-          <span>02.22</span>
-          <span>~</span>
+        <div class="mybook-info">
+          <div class="bookdate">
+            <span>02.22</span>
+            <span>~</span>
+          </div>
+          <div class="bookreturn">
+            <button class="returnbtn">반납</button>
+          </div>
         </div>
       </div>
 
@@ -99,29 +124,14 @@
         <div class="mybook-img">
           <img src="images/pic-1.png" alt="" />
         </div>
-        <div class="mybook-date">
-          <span>02.22</span>
-          <span>~</span>
-        </div>
-      </div>
-
-      <div class="mybook">
-        <div class="mybook-img">
-          <img src="images/pic-1.png" alt="" />
-        </div>
-        <div class="mybook-date">
-          <span>02.22</span>
-          <span>~</span>
-        </div>
-      </div>
-
-      <div class="mybook">
-        <div class="mybook-img">
-          <img src="images/pic-1.png" alt="" />
-        </div>
-        <div class="mybook-date">
-          <span>02.22</span>
-          <span>~</span>
+        <div class="mybook-info">
+          <div class="bookdate">
+            <span>02.22</span>
+            <span>~</span>
+          </div>
+          <div class="bookreturn">
+            <button class="returnbtn">반납</button>
+          </div>
         </div>
       </div>
     </section>
