--- a/mypage_book.html
+++ b/mypage_book.html
@@ -55,7 +55,7 @@
             <span>~</span>
           </div>
           <div class="bookreturn">
-            <button class="returnbtn">반납</button>
+            <button class="returnbtn">반납하기</button>
           </div>
         </div>
       </div>
@@ -70,7 +70,7 @@
             <span>~</span>
           </div>
           <div class="bookreturn">
-            <button class="returnbtn">반납</button>
+            <button class="returnbtn">반납하기</button>
           </div>
         </div>
       </div>
@@ -85,7 +85,7 @@
             <span>~</span>
           </div>
           <div class="bookreturn">
-            <button class="returnbtn">반납</button>
+            <button class="returnbtn">반납하기</button>
           </div>
         </div>
       </div>
@@ -100,7 +100,7 @@
             <span>~</span>
           </div>
           <div class="bookreturn">
-            <button class="returnbtn">반납</button>
+            <button class="returnbtn">반납하기</button>
           </div>
         </div>
       </div>
@@ -115,7 +115,7 @@
             <span>~</span>
           </div>
           <div class="bookreturn">
-            <button class="returnbtn">반납</button>
+            <button class="returnbtn">반납하기</button>
           </div>
         </div>
       </div>
@@ -130,7 +130,7 @@
             <span>~</span>
           </div>
           <div class="bookreturn">
-            <button class="returnbtn">반납</button>
+            <button class="returnbtn">반납하기</button>
           </div>
         </div>
       </div>
