--- a/book.html
+++ b/book.html
@@ -58,7 +58,7 @@
             placeholder="책 이름을 입력해주세요"
             class="booksearch"
           />
-          <a href="book_takeout.html"><i class="fas fa-search"></i></a>
+          <i class="fas fa-search"></i>
         </form>
       </div>
     </section>
