--- a/mypage_book.html
+++ b/mypage_book.html
@@ -45,6 +45,9 @@
     </header>
 
     <section class="mypagebookbox">
+      <div class="takeoutbox-head">
+        <span>대여한 책 목록</span>
+      </div>
       <div class="mybook">
         <div class="mybook-img">
           <img src="images/pic-1.png" alt="" />
