--- a/board.html
+++ b/board.html
@@ -78,13 +78,16 @@
               무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세</span
             >
           </div>
-          <div class="talk-content-foot">
-            <div class="talk-content-foot-etc">
-              <span class="comment"
-                >댓글<i class="far fa-comment-dots talk-comment"></i
-              ></span>
-            </div>
 
+          <div class="talk-content-footone">
+            <div class="talk-content-foot-etc">
+              <i class="far fa-comment-dots talk-comment"></i>
+              <span class="commenttext">댓글</span>
+              <span>2</span>
+            </div>
+          </div>
+
+          <div class="talk-content-foot">
             <div class="talk-content-comment">
               <div class="talk-content-commentbox">
                 <div class="talk-content-comment-text">
@@ -104,129 +107,9 @@
                 </div>
               </div>
               <form action="" class="commentwrite-form">
-                <input type="text" class="commentwrite" />
+                <textarea name="" class="commentwrite"></textarea>
+                <button class="commentbtn">작성</button>
               </form>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="talkboard-box">
-        <div class="talk-content">
-          <div class="talk-content-head">
-            <img src="images/char.PNG" alt="" />
-            <div class="talk-content-head2">
-              <span>역곡불주먹</span>
-              <span>01.08</span>
-            </div>
-          </div>
-          <div class="talk-content-main">
-            <span
-              >동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세
-              무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세</span
-            >
-          </div>
-          <div class="talk-content-foot">
-            <div class="talk-content-foot-etc">
-              <span>댓글<i class="far fa-comment-dots talk-comment"></i></span>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="talkboard-box">
-        <div class="talk-content">
-          <div class="talk-content-head">
-            <img src="images/char.PNG" alt="" />
-            <div class="talk-content-head2">
-              <span>역곡불주먹</span>
-              <span>01.08</span>
-            </div>
-          </div>
-          <div class="talk-content-main">
-            <span
-              >동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세
-              무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세</span
-            >
-          </div>
-          <div class="talk-content-foot">
-            <div class="talk-content-foot-etc">
-              <span>댓글<i class="far fa-comment-dots talk-comment"></i></span>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="talkboard-box">
-        <div class="talk-content">
-          <div class="talk-content-head">
-            <img src="images/char.PNG" alt="" />
-            <div class="talk-content-head2">
-              <span>역곡불주먹</span>
-              <span>01.08</span>
-            </div>
-          </div>
-          <div class="talk-content-main">
-            <span
-              >동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세
-              무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세동해물과
-              백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화
-              삼천리 화려강산 대한사람 대한으로 길이 보전하세 동해물과 백두산이
-              마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화 삼천리
-              화려강산 대한사람 대한으로 길이 보전하세</span
-            >
-          </div>
-          <div class="talk-content-foot">
-            <div class="talk-content-foot-etc">
-              <span>댓글<i class="far fa-comment-dots talk-comment"></i></span>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="talkboard-box">
-        <div class="talk-content">
-          <div class="talk-content-head">
-            <img src="images/char.PNG" alt="" />
-            <div class="talk-content-head2">
-              <span>역곡불주먹</span>
-              <span>01.08</span>
-            </div>
-          </div>
-          <div class="talk-content-main">
-            <span
-              >동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세
-              무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세</span
-            >
-          </div>
-          <div class="talk-content-foot">
-            <div class="talk-content-foot-etc">
-              <span>댓글<i class="far fa-comment-dots talk-comment"></i></span>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="talkboard-box">
-        <div class="talk-content">
-          <div class="talk-content-head">
-            <img src="images/char.PNG" alt="" />
-            <div class="talk-content-head2">
-              <span>역곡불주먹</span>
-              <span>01.08</span>
-            </div>
-          </div>
-          <div class="talk-content-main">
-            <span
-              >동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세
-              무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세 동해물과
-              백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화
-              삼천리 화려강산 대한사람 대한으로 길이 보전하세</span
-            >
-          </div>
-          <div class="talk-content-foot">
-            <div class="talk-content-foot-etc">
-              <span>댓글<i class="far fa-comment-dots talk-comment"></i></span>
             </div>
           </div>
         </div>
