--- a/board.html
+++ b/board.html
@@ -66,6 +66,7 @@
                 <span>01.08</span>
               </div>
             </div>
+
             <div class="talk-content-right">
               <div class="talk-content-head3">
                 <a href="comment.html"><i class="fas fa-ellipsis-v"></i></a>
@@ -89,6 +90,10 @@
 
           <div class="talk-content-foot">
             <div class="talk-content-comment">
+              <div class="commentbox_name">
+                <span class="comment_name">Darren</span>
+                <span>02-22</span>
+              </div>
               <div class="talk-content-commentbox">
                 <div class="talk-content-comment-text">
                   <span>오~~ 좋아요~!!</span>
