--- a/signup.html
+++ b/signup.html
@@ -48,7 +48,12 @@
       <form action="#" class="joinform">
         <div class="join_input">
           <label for="id">아이디</label>
-          <input type="text" id="id" placeholder="아이디를 입력해주세요" />
+          <input
+            type="text"
+            id="id"
+            name="userId"
+            placeholder="아이디를 입력해주세요"
+          />
         </div>
 
         <div class="join_input">
@@ -56,6 +61,7 @@
           <input
             type="password"
             id="pw"
+            name="userPassword"
             placeholder="비밀번호를 입력해주세요"
           />
         </div>
@@ -65,6 +71,7 @@
           <input
             type="password"
             id="pw_check"
+            name="userPassword"
             placeholder="비밀번호를 한 번 더 입력해주세요"
           />
         </div>
@@ -74,23 +81,34 @@
           <input
             type="text"
             id="nickname"
+            name="nickName"
             placeholder="닉네임을 입력해주세요"
           />
         </div>
 
         <div class="join_input">
           <label for="name">이름</label>
-          <input type="text" id="name" placeholder="이름을 입력해주세요" />
+          <input
+            type="text"
+            id="name"
+            name="userName"
+            placeholder="이름을 입력해주세요"
+          />
         </div>
 
         <div class="join_input">
           <label for="number">학번</label>
-          <input type="number" id="number" placeholder="학번을 입력해주세요" />
+          <input
+            type="number"
+            id="number"
+            name="userCode"
+            placeholder="학번을 입력해주세요"
+          />
         </div>
 
         <div class="join_input">
           <label for="grade">학년</label>
-          <select id="grade">
+          <select id="grade" name="grade">
             <option value="1gr">1</option>
             <option value="2gr">2</option>
             <option value="3gr">3</option>
@@ -100,7 +118,12 @@
 
         <div class="join_input">
           <label for="email">이메일</label>
-          <input type="email" id="email" placeholder="이메일을 입력해주세요" />
+          <input
+            type="email"
+            id="email"
+            name="userEmail"
+            placeholder="이메일을 입력해주세요"
+          />
         </div>
 
         <div class="join_input">
@@ -108,6 +131,7 @@
           <input
             type="tel"
             id="phone"
+            name="userPhone"
             placeholder="핸드폰 번호를 입력해주세요"
           />
         </div>
