--- a/index.html
+++ b/index.html
@@ -23,21 +23,30 @@
   </head>
 
   <body>
-    <header>
-      <a href=""></a>
-
-      <nav class="navbar">
-        <a href="notice.html">공지사항</a>
-        <a href="board.html">자유게시판</a>
-        <a href="study.html">스터디룸</a>
-        <a href="book.html">책 대여</a>
-        <a href="#">공모전</a>
-      </nav>
-
-      <div class="icons">
-        <a href="login.html"><i class="fas fa-user" id="sm-login"></i></a>
-        <i class="fas fa-bars header-menu" id="menu-bars"></i>
+    <header class="navbar">
+      <div class="navbar_logo">
+        <img src="images/mainlogo.png" alt="" />
+        <a href="index.html"><span>셈틀쟁이</span></a>
       </div>
+
+      <ul class="navbar_menu">
+        <li><a href="notice.html">공지사항</a></li>
+        <li><a href="board.html">자유게시판</a></li>
+        <li><a href="study.html">스터디룸</a></li>
+        <li><a href="book.html">책 대여</a></li>
+        <li><a href="#">공모전</a></li>
+      </ul>
+
+      <div class="navbar_pcicon">
+        <button>Sign Up</button>
+      </div>
+
+      <ul class="navbar_icon">
+        <li>
+          <a href=""><i class="fas fa-user" id="sm-login"></i></a>
+        </li>
+        <li><i class="fas fa-bars header-menu" id="menu-bars"></i></li>
+      </ul>
     </header>
 
     <section class="home">
