--- a/index.html
+++ b/index.html
@@ -23,31 +23,33 @@
   </head>
 
   <body>
-    <header class="navbar">
-      <div class="navbar_logo">
-        <img src="images/mainlogo.png" alt="" />
-        <a href="index.html"><span>셈틀쟁이</span></a>
-      </div>
+    <section class="header">
+      <header class="navbar">
+        <div class="navbar_logo">
+          <img src="images/mainlogo.png" alt="" />
+          <a href="index.html"><span>셈틀쟁이</span></a>
+        </div>
 
-      <ul class="navbar_menu">
-        <li><a href="notice.html">공지사항</a></li>
-        <li><a href="board.html">자유게시판</a></li>
-        <li><a href="study.html">스터디룸</a></li>
-        <li><a href="book.html">책 대여</a></li>
-        <li><a href="#">공모전</a></li>
-      </ul>
+        <ul class="navbar_menu">
+          <li><a href="notice.html">공지사항</a></li>
+          <li><a href="board.html">자유게시판</a></li>
+          <li><a href="study.html">스터디룸</a></li>
+          <li><a href="book.html">책 대여</a></li>
+          <li><a href="#">공모전</a></li>
+        </ul>
 
-      <div class="navbar_pcicon">
-        <button>Sign Up</button>
-      </div>
+        <div class="navbar_pcicon">
+          <a href="signup.html"><button>Sign Up</button></a>
+        </div>
 
-      <ul class="navbar_icon">
-        <li>
-          <a href=""><i class="fas fa-user" id="sm-login"></i></a>
-        </li>
-        <li><i class="fas fa-bars header-menu" id="menu-bars"></i></li>
-      </ul>
-    </header>
+        <ul class="navbar_icon">
+          <li>
+            <a href=""><i class="fas fa-user" id="sm-login"></i></a>
+          </li>
+          <li><i class="fas fa-bars header-menu" id="menu-bars"></i></li>
+        </ul>
+      </header>
+    </section>
 
     <section class="home">
       <div class="home-main">
