--- a/board.html
+++ b/board.html
@@ -32,25 +32,37 @@
   </head>
 
   <body>
-    <header>
-      <a href="javascript:history.back();" id="header-before"
-        ><i class="fas fa-angle-left"></i
-      ></a>
-
-      <nav class="navbar">
-        <a href="notice.html">공지사항</a>
-        <a href="board.html">자유게시판</a>
-        <a href="study.html">스터디룸</a>
-        <a href="book.html">책 대여</a>
-        <a href="#">공모전</a>
-      </nav>
-
-      <span id="header-name">자유게시판</span>
-
-      <div class="icons">
-        <a href="index.html"><i class="fas fa-home" id="home-bar"></i></a>
-        <i class="fas fa-bars header-menu" id="menu-bars"></i>
+    <header class="navbar">
+      <div class="navbar_logo">
+        <img src="images/mainlogo.png" alt="" />
+        <a href="index.html"><span>셈틀쟁이</span></a>
       </div>
+
+      <div class="navbar_mobilelogo">
+        <a href="javascript:history.back();" id="header-before"
+          ><i class="fas fa-angle-left"></i
+        ></a>
+        <span class="mobile_title">공지사항</span>
+      </div>
+
+      <ul class="navbar_menu">
+        <a href="notice.html"><li>공지사항</li></a>
+        <a href="board.html"><li class="current">자유게시판</li></a>
+        <a href="study.html"><li>스터디룸</li></a>
+        <a href="book.html"><li>책 대여</li></a>
+        <a href="#"><li>공모전</li></a>
+      </ul>
+
+      <div class="navbar_pcicon">
+        <a href="signup.html"><button>Sign Up</button></a>
+      </div>
+
+      <ul class="navbar_icon">
+        <li>
+          <a href=""><i class="fas fa-user" id="sm-login"></i></a>
+        </li>
+        <li><i class="fas fa-bars header-menu" id="menu-bars"></i></li>
+      </ul>
     </header>
 
     <section class="heading">
