--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         </div>
 
         <ul class="navbar_menu">
-          <li><a href="notice.html">공지사항</a></li>
-          <li><a href="board.html">자유게시판</a></li>
-          <li><a href="study.html">스터디룸</a></li>
-          <li><a href="book.html">책 대여</a></li>
-          <li><a href="#">공모전</a></li>
+          <a href="notice.html"><li>공지사항</li></a>
+          <a href="board.html"><li>자유게시판</li></a>
+          <a href="study.html"><li>스터디룸</li></a>
+          <a href="book.html"><li>책 대여</li></a>
+          <a href="#"><li>공모전</li></a>
         </ul>
 
         <div class="navbar_pcicon">
