--- a/index.html
+++ b/index.html
@@ -42,12 +42,10 @@
           <a href="signup.html"><button>Sign Up</button></a>
         </div>
 
-        <ul class="navbar_icon">
-          <li>
-            <a href=""><i class="fas fa-user" id="sm-login"></i></a>
-          </li>
-          <li><i class="fas fa-bars header-menu" id="menu-bars"></i></li>
-        </ul>
+        <div class="navbar_icon">
+          <a href=""><i class="fas fa-user" id="sm-login"></i></a>
+          <i class="fas fa-bars header-menu" id="menu-bars"></i>
+        </div>
       </header>
     </section>
 
