--- a/board.html
+++ b/board.html
@@ -71,78 +71,80 @@
       </div>
     </section>
 
-    <section class="talkboard">
-      <div class="talkboard-head">
-        <a href="board_text.html"
-          ><span class="talkboard-head_write">글쓰기</span></a
-        >
-      </div>
-      <div class="talkboard-box">
-        <div class="talk-content">
-          <div class="talk-content-head">
-            <div class="talk-content-left">
-              <img src="images/char.PNG" alt="" />
-              <div class="talk-content-head2">
-                <span>역곡불주먹</span>
-                <span>01.08</span>
-              </div>
-            </div>
-
-            <div class="talk-content-right">
-              <div class="talk-content-head3">
-                <a href="comment.html"><i class="fas fa-ellipsis-v"></i></a>
-              </div>
-            </div>
-          </div>
-          <div class="talk-content-main">
-            <span
-              >동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세
-              무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세</span
-            >
-          </div>
-
-          <div class="talk-content-footone">
-            <div class="talk-content-foot-etc">
-              <i class="far fa-comment-dots talk-comment"></i>
-              <span class="commenttext">댓글</span>
-              <span>2</span>
-            </div>
-          </div>
-
-          <div class="talk-content-foot">
-            <div class="talk-content-comment">
-              <div class="commentbox_name">
-                <span class="comment_name">Darren</span>
-                <span>02-22</span>
-              </div>
-              <div class="talk-content-commentbox">
-                <div class="talk-content-comment-text">
-                  <span>오~~ 좋아요~!!</span>
-                </div>
-                <div class="talk-content-comment-icon">
-                  <i class="fas fa-times"></i>
+    <div class="semtle">
+      <section class="talkboard">
+        <div class="talkboard-head">
+          <a href="board_text.html"
+            ><span class="talkboard-head_write">글쓰기</span></a
+          >
+        </div>
+        <div class="talkboard-box">
+          <div class="talk-content">
+            <div class="talk-content-head">
+              <div class="talk-content-left">
+                <img src="images/char.PNG" alt="" />
+                <div class="talk-content-head2">
+                  <span>역곡불주먹</span>
+                  <span>01.08</span>
                 </div>
               </div>
 
-              <form action="" class="commentwrite-form">
-                <textarea name="" class="commentwrite"></textarea>
-              </form>
-              <div class="commentwrite_btn">
-                <input
-                  type="checkbox"
-                  name="freeboard_check"
-                  value="익명"
-                  id="freeboard_check"
-                  onclick="getfreeboardCheckboxValue(event)"
-                />
-                <label for="" id="freeboard_check">익명</label>
-                <button class="commentbtn">작성</button>
+              <div class="talk-content-right">
+                <div class="talk-content-head3">
+                  <a href="comment.html"><i class="fas fa-ellipsis-v"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="talk-content-main">
+              <span
+                >동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세
+                무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세</span
+              >
+            </div>
+
+            <div class="talk-content-footone">
+              <div class="talk-content-foot-etc">
+                <i class="far fa-comment-dots talk-comment"></i>
+                <span class="commenttext">댓글</span>
+                <span>2</span>
+              </div>
+            </div>
+
+            <div class="talk-content-foot">
+              <div class="talk-content-comment">
+                <div class="commentbox_name">
+                  <span class="comment_name">Darren</span>
+                  <span>02-22</span>
+                </div>
+                <div class="talk-content-commentbox">
+                  <div class="talk-content-comment-text">
+                    <span>오~~ 좋아요~!!</span>
+                  </div>
+                  <div class="talk-content-comment-icon">
+                    <i class="fas fa-times"></i>
+                  </div>
+                </div>
+
+                <form action="" class="commentwrite-form">
+                  <textarea name="" class="commentwrite"></textarea>
+                </form>
+                <div class="commentwrite_btn">
+                  <input
+                    type="checkbox"
+                    name="freeboard_check"
+                    value="익명"
+                    id="freeboard_check"
+                    onclick="getfreeboardCheckboxValue(event)"
+                  />
+                  <label for="" id="freeboard_check">익명</label>
+                  <button class="commentbtn">작성</button>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
 
     <footer class="footer">
       <div class="footer-box">
