--- a/index.html
+++ b/index.html
@@ -49,151 +49,153 @@
       </header>
     </section>
 
-    <section class="home">
-      <div class="home-main">
-        <img src="images/logo.PNG" alt="" />
-        <h3>셈틀쟁이</h3>
-      </div>
-    </section>
+    <div class="semtle">
+      <section class="home">
+        <div class="home-main">
+          <img src="images/logo.PNG" alt="" />
+          <h3>셈틀쟁이</h3>
+        </div>
+      </section>
 
-    <section class="member">
-      <div class="member-box">
-        <div class="member-main1">
-          <div class="member-subject">셈하 :)</div>
-          <div class="member-header">
-            <h3>김대현</h3>
-            <span> 님 환영합니다</span>
+      <section class="member">
+        <div class="member-box">
+          <div class="member-main1">
+            <div class="member-subject">셈하 :)</div>
+            <div class="member-header">
+              <h3>김대현</h3>
+              <span> 님 환영합니다</span>
+            </div>
+          </div>
+          <div class="member-main2">
+            <a href="mypage.html"><img src="images/char.PNG" alt="" /></a>
           </div>
         </div>
-        <div class="member-main2">
-          <a href="mypage.html"><img src="images/char.PNG" alt="" /></a>
+      </section>
+
+      <section class="calendar">
+        <div class="calendar-subject">
+          <span>셈틀 일정</span>
+          <i class="fas fa-angle-right"></i>
         </div>
-      </div>
-    </section>
+        <div class="calendar-box"></div>
+      </section>
 
-    <section class="calendar">
-      <div class="calendar-subject">
-        <span>셈틀 일정</span>
-        <i class="fas fa-angle-right"></i>
-      </div>
-      <div class="calendar-box"></div>
-    </section>
-
-    <section class="notice">
-      <div class="notice-subject">
-        <a href="notice.html"><span>공지사항</span></a>
-        <a href="notice.html"><i class="fas fa-angle-right"></i></a>
-      </div>
-
-      <div class="notice-box">
-        <div class="notice-heading">
-          <h3>셈틀쟁이는 어떤 학회인가요?</h3>
-          <i class="fas fa-angle-down"></i>
+      <section class="notice">
+        <div class="notice-subject">
+          <a href="notice.html"><span>공지사항</span></a>
+          <a href="notice.html"><i class="fas fa-angle-right"></i></a>
         </div>
-        <div class="notice-content" id="thisone">
-          <p>안녕하세요. 셈틀쟁이입니다. 환영해요!! 셈-하!!</p>
-        </div>
-      </div>
 
-      <div class="notice-box">
-        <div class="notice-heading">
-          <h3>셈틀쟁이 가입은 어떻게 하나요?</h3>
-          <i class="fas fa-angle-down"></i>
+        <div class="notice-box">
+          <div class="notice-heading">
+            <h3>셈틀쟁이는 어떤 학회인가요?</h3>
+            <i class="fas fa-angle-down"></i>
+          </div>
+          <div class="notice-content" id="thisone">
+            <p>안녕하세요. 셈틀쟁이입니다. 환영해요!! 셈-하!!</p>
+          </div>
         </div>
-        <div class="notice-content">
-          <p>가입 문자 전화 디엠 주세요 ㅋㅋ</p>
+
+        <div class="notice-box">
+          <div class="notice-heading">
+            <h3>셈틀쟁이 가입은 어떻게 하나요?</h3>
+            <i class="fas fa-angle-down"></i>
+          </div>
+          <div class="notice-content">
+            <p>가입 문자 전화 디엠 주세요 ㅋㅋ</p>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <div class="book">
-      <div class="book-subject">
-        <span> 책 대여</span>
-        <i class="fas fa-angle-right"></i>
-      </div>
+      <div class="book">
+        <div class="book-subject">
+          <span> 책 대여</span>
+          <i class="fas fa-angle-right"></i>
+        </div>
 
-      <div class="swiper book-box">
-        <div class="swiper-wrapper book-wrapper">
-          <div class="swiper-slide slide">
-            <div class="image">
-              <img src="images/pic-1.png" alt="" />
-            </div>
-            <div class="content">
-              <h3>c언어</h3>
-              <div class="content_info">
-                <h2>김대현</h2>
-                <h2>/</h2>
-                <h2>출판사</h2>
+        <div class="swiper book-box">
+          <div class="swiper-wrapper book-wrapper">
+            <div class="swiper-slide slide">
+              <div class="image">
+                <img src="images/pic-1.png" alt="" />
+              </div>
+              <div class="content">
+                <h3>c언어</h3>
+                <div class="content_info">
+                  <h2>김대현</h2>
+                  <h2>/</h2>
+                  <h2>출판사</h2>
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="swiper-slide slide">
-            <div class="image">
-              <img src="images/pic-2.png" alt="" />
-            </div>
-            <div class="content">
-              <h3>c언어</h3>
-              <div class="content_info">
-                <h2>김대현</h2>
-                <h2>/</h2>
-                <h2>출판사</h2>
+            <div class="swiper-slide slide">
+              <div class="image">
+                <img src="images/pic-2.png" alt="" />
+              </div>
+              <div class="content">
+                <h3>c언어</h3>
+                <div class="content_info">
+                  <h2>김대현</h2>
+                  <h2>/</h2>
+                  <h2>출판사</h2>
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="swiper-slide slide">
-            <div class="image">
-              <img src="images/pic-3.png" alt="" />
-            </div>
-            <div class="content">
-              <h3>c언어</h3>
-              <div class="content_info">
-                <h2>김대현</h2>
-                <h2>/</h2>
-                <h2>출판사</h2>
+            <div class="swiper-slide slide">
+              <div class="image">
+                <img src="images/pic-3.png" alt="" />
+              </div>
+              <div class="content">
+                <h3>c언어</h3>
+                <div class="content_info">
+                  <h2>김대현</h2>
+                  <h2>/</h2>
+                  <h2>출판사</h2>
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="swiper-slide slide">
-            <div class="image">
-              <img src="images/pic-4.png" alt="" />
-            </div>
-            <div class="content">
-              <h3>c언어</h3>
-              <div class="content_info">
-                <h2>김대현</h2>
-                <h2>/</h2>
-                <h2>출판사</h2>
+            <div class="swiper-slide slide">
+              <div class="image">
+                <img src="images/pic-4.png" alt="" />
+              </div>
+              <div class="content">
+                <h3>c언어</h3>
+                <div class="content_info">
+                  <h2>김대현</h2>
+                  <h2>/</h2>
+                  <h2>출판사</h2>
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="swiper-slide slide">
-            <div class="image">
-              <img src="images/pic-4.png" alt="" />
-            </div>
-            <div class="content">
-              <h3>c언어</h3>
-              <div class="content_info">
-                <h2>김대현</h2>
-                <h2>/</h2>
-                <h2>출판사</h2>
+            <div class="swiper-slide slide">
+              <div class="image">
+                <img src="images/pic-4.png" alt="" />
+              </div>
+              <div class="content">
+                <h3>c언어</h3>
+                <div class="content_info">
+                  <h2>김대현</h2>
+                  <h2>/</h2>
+                  <h2>출판사</h2>
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="swiper-slide slide">
-            <div class="image">
-              <img src="images/pic-4.png" alt="" />
-            </div>
-            <div class="content">
-              <h3>c언어</h3>
-              <div class="content_info">
-                <h2>김대현</h2>
-                <h2>/</h2>
-                <h2>출판사</h2>
+            <div class="swiper-slide slide">
+              <div class="image">
+                <img src="images/pic-4.png" alt="" />
+              </div>
+              <div class="content">
+                <h3>c언어</h3>
+                <div class="content_info">
+                  <h2>김대현</h2>
+                  <h2>/</h2>
+                  <h2>출판사</h2>
+                </div>
               </div>
             </div>
           </div>
