--- a/notice.html
+++ b/notice.html
@@ -23,27 +23,6 @@
   </head>
 
   <body>
-    <!-- <header>
-      <a href="javascript:history.back();" id="header-before"
-        ><i class="fas fa-angle-left"></i
-      ></a>
-
-      <nav class="navbar">
-        <a href="notice.html">공지사항</a>
-        <a href="board.html">자유게시판</a>
-        <a href="study.html">스터디룸</a>
-        <a href="book.html">책 대여</a>
-        <a href="#">공모전</a>
-      </nav>
-
-      <span id="header-name">공지사항</span>
-
-      <div class="icons">
-        <a href="index.html"><i class="fas fa-home" id="home-bar"></i></a>
-        <i class="fas fa-bars header-menu" id="menu-bars"></i>
-      </div>
-    </header> -->
-
     <header class="navbar">
       <div class="navbar_logo">
         <img src="images/mainlogo.png" alt="" />
@@ -83,9 +62,20 @@
       </div>
     </section>
 
-    <section class="noticeboard">
-      <div class="noticeboard-box">
-        <a href="notice_text.html">
+    <div class="semtle">
+      <section class="noticeboard">
+        <div class="noticeboard-box">
+          <a href="notice_text.html">
+            <div class="notice-content">
+              <div class="notice-content-head">
+                <span>[공지] 셈틀 회원 모집합니다 :)</span>
+              </div>
+              <div class="notice-content-foot">
+                <span>2022.01.06</span>
+              </div>
+            </div>
+          </a>
+
           <div class="notice-content">
             <div class="notice-content-head">
               <span>[공지] 셈틀 회원 모집합니다 :)</span>
@@ -94,45 +84,36 @@
               <span>2022.01.06</span>
             </div>
           </div>
-        </a>
 
-        <div class="notice-content">
-          <div class="notice-content-head">
-            <span>[공지] 셈틀 회원 모집합니다 :)</span>
+          <div class="notice-content">
+            <div class="notice-content-head">
+              <span>[공지] 셈틀 회원 모집합니다 :)</span>
+            </div>
+            <div class="notice-content-foot">
+              <span>2022.01.06</span>
+            </div>
           </div>
-          <div class="notice-content-foot">
-            <span>2022.01.06</span>
+
+          <div class="notice-content">
+            <div class="notice-content-head">
+              <span>[공지] 셈틀 회원 모집합니다 :)</span>
+            </div>
+            <div class="notice-content-foot">
+              <span>2022.01.06</span>
+            </div>
+          </div>
+
+          <div class="notice-content">
+            <div class="notice-content-head">
+              <span>[공지] 셈틀 회원 모집합니다 :)</span>
+            </div>
+            <div class="notice-content-foot">
+              <span>2022.01.06</span>
+            </div>
           </div>
         </div>
-
-        <div class="notice-content">
-          <div class="notice-content-head">
-            <span>[공지] 셈틀 회원 모집합니다 :)</span>
-          </div>
-          <div class="notice-content-foot">
-            <span>2022.01.06</span>
-          </div>
-        </div>
-
-        <div class="notice-content">
-          <div class="notice-content-head">
-            <span>[공지] 셈틀 회원 모집합니다 :)</span>
-          </div>
-          <div class="notice-content-foot">
-            <span>2022.01.06</span>
-          </div>
-        </div>
-
-        <div class="notice-content">
-          <div class="notice-content-head">
-            <span>[공지] 셈틀 회원 모집합니다 :)</span>
-          </div>
-          <div class="notice-content-foot">
-            <span>2022.01.06</span>
-          </div>
-        </div>
-      </div>
-    </section>
+      </section>
+    </div>
 
     <footer class="footer">
       <div class="footer-box">
