--- a/index.html
+++ b/index.html
@@ -205,7 +205,9 @@
 
     <footer class="footer">
       <div class="footer-box">
-        <div class="footer-content">셈틀쟁이 가톨릭대 성심교정 다솔관 D410</div>
+        <div class="footer-content">
+          셈틀쟁이<br />가톨릭대 성심교정 다솔관 D410
+        </div>
         <div class="footer-content">회장 김대현 010-3249-7669</div>
         <div class="footer-content">
           <i class="fab fa-facebook"></i>
