--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
           <a href="index.html"><span>셈틀쟁이</span></a>
         </div>
 
+        <div class="navbar_mobilelogo">
+          <a href="javascript:history.back();" id="header-before"
+            ><i class="fas fa-angle-left"></i
+          ></a>
+          <span class="mobile_title">공지사항</span>
+        </div>
+
         <ul class="navbar_menu">
           <a href="notice.html"><li>공지사항</li></a>
           <a href="board.html"><li>자유게시판</li></a>
